--- a/app/assets/stylesheets/_base.css.scss
+++ b/app/assets/stylesheets/_base.css.scss
@@ -3,9 +3,10 @@
 @import "compass/utilities/general/min";
 @import "compass/typography/text/force-wrap";
 
-$mainColor: #000000;
+$mainColor: #808080;
 
 $borderBottom: 1px solid #BAB8B0;
+$borderDashed: 1px dashed #BAB8B0;
 $borderBottomShadow: #FFF 0px 1px 0;
 
 $borderRight: 1px solid #BAB8B0;
