--- a/app/assets/stylesheets/bootstrap.css.erb
+++ b/app/assets/stylesheets/bootstrap.css.erb
@@ -134,14 +134,14 @@ body {
   font-size: 13px;
   line-height: 18px;
   color: #333333;
-  background-color: #FFF;
+  background-color: #EEE;
 }
 a {
   color: #3190a4;
   text-decoration: none;
 }
 a:hover {
-  color: #266876;
+  color: #808080;
 }
 .row {
   margin-left: -20px;
@@ -162,13 +162,14 @@ a:hover {
 .container,
 .navbar-fixed-top .container,
 .navbar-fixed-bottom .container {
+	  background-color: #FFF;
   width: 1080px;
 }
 .span12 {
-  width: 1080px;
+  width: 1024px;
 }
 .span11 {
-  width: 990px;
+  width: 970px;
 }
 .span10 {
   width: 900px;
@@ -192,13 +193,13 @@ a:hover {
   width: 340px;
 }
 .span3 {
-  width: 270px;
+  width: 220px;
 }
 .span2 {
-  width: 180px;
+  width: 150px;
 }
 .span1 {
-  width: 90px;
+  width: 70px;
 }
 .offset12 {
   margin-left: 980px;
@@ -389,7 +390,7 @@ h2 small {
   font-size: 18px;
 }
 h3 {
-  font-size: 18px;
+  font-size: 20px;
   line-height: 27px;
 }
 h3 small {
