--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -2,7 +2,6 @@
 <h1>Create a group</h1>
 
 
-
 ##### RAJOUTER UN BOUTON APRES POUR RAJOUTER DES GENS ####
 <div class="row">
   <div class="span6 offset3">
@@ -13,10 +12,9 @@
       <%= f.label :title %>
       <%= f.text_field :title %>
 
-      <%= f.label :Description %>
+      <%= f.label :description %>
       <%= f.text_field :description %>
       
-
       <%= f.submit "Create a group", class: "btn btn-large btn-primary" %>
 	
 	<% end %>
