--- a/app/assets/stylesheets/application.css.scss.erb
+++ b/app/assets/stylesheets/application.css.scss.erb
@@ -14,8 +14,19 @@
 
 
 @font-face {
-  font-family: "Bebas";
-  src: url(<%= asset_path "Bebas.ttf" %>);
+    font-family: 'gotham';
+    src: url(font-path('gotham.eot') + "?#iefix") format('embedded-opentype'),
+         url(font-path('gotham.woff')) format('woff'), 
+         url(font-path('gotham.ttf'))  format('truetype'),
+         url(font-path('gotham.svg') + "#gotham") format('svg');
+}
+
+@font-face {
+    font-family: 'bebasneue-webfont';
+    src: url(font-path('bebasneue-webfont.eot') + "?#iefix") format('embedded-opentype'),
+         url(font-path('bebasneue-webfont.woff')) format('woff'), 
+         url(font-path('bebasneue-webfont.ttf'))  format('truetype'),
+         url(font-path('bebasneue-webfont.svg') + "#bebasneue-webfont") format('svg');
 }
 
 h1 a, h2 a, h3 a, h4 a, h5 a {
@@ -24,6 +35,7 @@ h1 a, h2 a, h3 a, h4 a, h5 a {
 
 h1.title, h2.title, h3.title, h4.title, h5.title {
   @include border-bottom;
+	font-family: 'gotham';
   margin-bottom: 20px;
 }
 
