--- a/app/assets/stylesheets/header.css.scss
+++ b/app/assets/stylesheets/header.css.scss
@@ -1,50 +1,217 @@
 header {
-  height: 200px;
+  height: 252px;
   position: relative;
-  background-color: #FFF;
   
   
   @include subtle-link;
   
   .container {
-    padding: 0px 0px;
-  
-    #logo {
-	margin-top: 15px;
-	@include float-right;
+  background-color: #FFF;
+
+  #logo {
+	margin-top:25px;
+	margin-left:65px;
+
     }
 
-
-	#search {
-	  @include float-left;
+	#gris{
+	  background-color:#808080;
 	  margin-top: 5px;
-	  margin-left: 5px;
-	  width: 130px
-      ;
-    }
+	  margin-left: 60px;
+	  width: 232px;
+	  height: 35px;
 	
-	#Notifications{
-	margin-top: 15px;
-	margin-left: 10px	
+		.loupe{
+		padding-left:185px;
+		padding-top: 3px;  
+		}
+	}
+		
+	#search-form{
 	}
 	
+	#search-text{
+	  margin-top: -46px;
+	  margin-left: 65px;
+	  width: 152px;
+	  height: 27px;
+	  font-family: 'bebasneue-webfont';
+	  font-size:22px;
+	  color: black;
+	}
+	
+	#ligne1{
+	margin-top: 30px;
+	#Notifications{
+		margin-top: 7px;
+		margin-left: 60px;
+		background-color: #FF6969;
+		height:38px;
+		width:66px;
+		
+		#image { 
+		margin-top: 3px;
+		margin-left: 9px;
+		}
+		
+		#chiffre { 
+		margin-top: -21px;
+		margin-left: 45px;
+		font-family: 'bebasneue-webfont';
+		font-size:25px;
+		color: white;
+		}
+	}
+	
+	#Notifications2{
+		margin-top: 7px;
+		margin-left: 6px;
+		background-color: #FF6969;
+		height:38px;
+		width:66px;
+		
+		#image { 
+		margin-top: 3px;
+		margin-left: 9px;
+		}
+		
+		#chiffre { 
+		margin-top: -20px;
+		margin-left: 45px;
+		font-family: 'bebasneue-webfont';
+		font-size:25px;
+		color: white;
+		}
+	}	
+	}
+
+	#ligne2{
+	#Notifications3{
+		margin-top: 7px;
+		margin-left: 60px;
+		background-color: #FF6969;
+		height:38px;
+		width:66px;
+		
+		#image { 
+		margin-top: 3px;
+		margin-left: 7px;
+		}
+		
+		#chiffre { 
+		margin-top: -23px;
+		margin-left: 45px;
+		font-family: 'bebasneue-webfont';
+		font-size:25px;
+		color: white;
+		}
+	}	
+
+	#Notifications4{
+		margin-top: 7px;
+		margin-left: 6px;
+		background-color: #FF6969;
+		height:38px;
+		width:66px;
+		
+		#image { 
+		margin-top: 3px;
+		margin-left: 9px;
+		}
+		
+		#chiffre { 
+		margin-top: -23px;
+		margin-left: 45px;
+		font-family: 'bebasneue-webfont';
+		font-size:25px;
+		color: white;
+		}
+	}	
+	}
+
     
-  
-    #user-nav {    
-      @include float-right;
-      margin: 20px 0px;
+    #adroite{
+	margin-top:50px;
+	
+	#user-nav {    
+	  margin-left:150px;
+	  background-color: #000000;
+      height:28px;
+	  width: 128px;
+	  font-family: 'gotham';
+	  color: white;
+	  text-align:center;
+      line-height: 25px;
+	  font-size: 15px;
+	
     }
+	#deconnecte{
+	  margin-left:183px;
+	  background-color: #000000;
+	  height:28px;
+	  width: 128px;
+	  text-align:center;
+      line-height: 25px;
+
+	
+		.test{
+			font-family: 'gotham';
+	  		color: white;
+		  	font-size: 12px;		
+		}
+	}
+	
+	#dropdown{
+		margin-left:135px;
+		margin-top: -25px;
+		
+	}
+
 
 	#debat-nav{
-		@include float-right;
+	
+	#facebook-page{
+	background-color:#000000;
+	height:28px;
+	width:28px;
+	margin-top:10px;
+	margin-left: 270px;
+	
+	.image{
+	padding-top:4px;
+	padding-left: 10px;
+	}
+	}
+	
+	#twitter-page{
+	background-color:#000000;
+	height:28px;
+	width:28px;
+	margin-top:-28px;
+	margin-left: 303px;
+	
+	.image{
+	}
+	}
+	
+	#apprendre{
+		height:34px;
+		width: 200px;
+		background-color:#808080;
+		text-align:center;
+		margin-top:10px;
+		margin-left: 111px;
+		
 		li {
 	        display: inline-block;
 	        a {
 	          strong {
+				font-family: 'gotham';
 	            display: block;
-	            font-size: 15px;
-	            line-height: 40px;
+	            font-size: 12px;
+	            line-height: 35px;
 	            @include title;
+				color:white;
 	          }
 	        }
 	      }
@@ -53,21 +220,27 @@ header {
 	        a {
 	          text-decoration: none;        
 	          strong {
-	            color: $mainColor;
+	            color: #000000;
 	          }
 	        }
 		  }
 	}
+	}
+	}
+    
 	
 	#navigation{
-	border-top: $borderBottom;
-	border-bottom: $borderBottom
+	margin-top: 10px;
+	margin-left: 60px;
+	margin-right: -10px;
+	border-bottom: $borderDashed;
+	    font-size: 20px;
 	}
 	
 	#main-nav {
-    margin-left:200px;
+    margin-left:70px;
+	margin-top: 10px;
 	
-    
       li {
         
         display: inline-block;
@@ -75,9 +248,9 @@ header {
         a {
           strong {
             display: block;
-            font-size: 15px;
-            line-height: 40px;
+            font-size: 20px;
             @include title;
+			color:#000000;
           }
         
         }
